[package]
name = "ferris_todo_app"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "Ferris_Todo_App"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = { version = "0.3.0" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
scraper = "0.17.1"
